--- a/02-playbook.yml
+++ b/02-playbook.yml
@@ -1,6 +1,6 @@
 - name: ping the server
   hosts: hosts
-  connecton: local
+  connection: local
   become: yes
   tasks:
     - name: ping the server
