--- a/06-taskvars.yaml
+++ b/06-taskvars.yaml
@@ -9,5 +9,7 @@
 
   tasks:
     - name: print data info
+      vars:
+      NAME: "Prashu"
       ansible.builtin.debug:
         msg: "Name is: {{ NAME }},  Course is: {{ COURSE }}, Place is: {{ PLACE }}"
