--- a/hosts.ini
+++ b/hosts.ini
@@ -3,9 +3,6 @@
 [local]
 localhost
 
-[local:vars]
-NAME=Prahanth Reddy from ini
-
 [webapp]
 192.168.32.43
 192.168.32.44
@@ -17,3 +14,6 @@ NAME=Prahanth Reddy from ini
 [roboshop:children]
 webapp
 DB
+
+[local:vars]
+NAME="Prahanth Reddy from ini"
