--- a/hosts.ini
+++ b/hosts.ini
@@ -3,6 +3,9 @@
 [local]
 localhost
 
+[local:vars]
+NAME=Prahanth Reddy from ini
+
 [webapp]
 192.168.32.43
 192.168.32.44
@@ -15,5 +18,3 @@ localhost
 webapp
 DB
 
-[local:vars]
-NAME="Prahanth Reddy from ini"
