--- a/08-inventoryvars.yaml
+++ b/08-inventoryvars.yaml
@@ -1,6 +1,6 @@
 - name: Play level variables
   hosts: local
-  connection: local
+  # connection: local
   become: yes
   tasks:
     - name: print data info
