--- a/08-inventoryvars.yaml
+++ b/08-inventoryvars.yaml
@@ -2,7 +2,16 @@
   hosts: localhost
   # connection: local
   become: yes
+
+  vars:
+    COURSE: "DEVOPS"
+    PLACE: "ONLINE"
+
   tasks:
     - name: print data info
       ansible.builtin.debug:
-        msg: "Name is: {{ NAME }}"
+        msg: "Course is: {{ COURSE }}, Place is: {{ PLACE }}"
+
+    # - name: print data info
+    #   ansible.builtin.debug:
+    #     msg: "Name is: {{ NAME }}"
