--- a/08-inventoryvars.yaml
+++ b/08-inventoryvars.yaml
@@ -1,6 +1,6 @@
 - name: Play level variables
   hosts: localhost
-  connection: local
+  # connection: local
   become: yes
 
   vars:
@@ -12,6 +12,6 @@
       ansible.builtin.debug:
         msg: "Course is: {{ COURSE }}, Place is: {{ PLACE }}"
 
-    # - name: print data info
-    #   ansible.builtin.debug:
-    #     msg: "Name is: {{ NAME }}"
+    - name: print data info
+      ansible.builtin.debug:
+        msg: "Name is: {{ NAME }}"
