--- a/hosts.ini
+++ b/hosts.ini
@@ -1,19 +1,5 @@
-192.168.32.121
-
 [local]
 localhost
 
-[webapp]
-192.168.32.43
-192.168.32.44
-
-[DB]
-192.168.32.45
-192.168.32.46
-
-[roboshop:children]
-webapp
-DB
-
 [local:vars]
-NAME=Prahanth Reddy from ini
+NAME="I am from INVENTORY"
