--- a/hosts.ini
+++ b/hosts.ini
@@ -1,3 +1,17 @@
+192.136.1.20
+
+[frontend]
+192.136.1.21
+192.136.1.22
+
+[backend]
+192.136.1.23
+192.136.1.24
+
+[production:childern]
+frontend
+backend
+
 [local]
 localhost
 
