--- a/filter.yaml
+++ b/filter.yaml
@@ -4,6 +4,7 @@
 
   vars:
     topics: linux, shell, ansible, github
+    course: "DevOps wiTh Ansible"
     tagMap:
       name: ansible
       project: roboshop
@@ -39,3 +40,11 @@
     - name: convert list to map
       ansible.builtin.debug:
         msg: "{{ tagList | items2dict }}"
+    
+    - name: convert to upper
+      ansible.builtin.debug:
+        msg: "{{ course | upper }}"
+    
+    - name: convert to lower
+      ansible.builtin.debug:
+        msg: "{{ course | lower }}"
