--- a/hosts.ini
+++ b/hosts.ini
@@ -1,22 +1,22 @@
-192.136.1.20
+# 192.136.1.20
 
-[local]
-localhost
+# [local]
+# localhost
 
-[local:vars]
-NAME="I am from INVENTORY"
+# [local:vars]
+# NAME="I am from INVENTORY"
 
-[frontend]
-192.136.1.21
-192.136.1.22
+# [frontend]
+# 192.136.1.21
+# 192.136.1.22
 
-[backend]
-192.136.1.23
-192.136.1.24
+# [backend]
+# 192.136.1.23
+# 192.136.1.24
 
-[production:children]
-frontend
-backend
+# [production:children]
+# frontend
+# backend
 
 [targets]
 172.31.27.213
